Add buttons, main container

--- a/index.html
+++ b/index.html
@@ -9,3 +9,11 @@
 <body>
   <header class="nav" aria-label="header section">
   <h2 class="number-title">Number <span class="guesser" aria-label="Title of Game">Guesser </span></h2>
+  </h2>
+  </header>
+  <main class="container" aria-label="main container enclosing main section of page">
+    <input placeholder="Enter your guess" class="search-box" aria-label="section for inputting your guesses">
+    <article class="top-buttons" aria-label="section with guess and search buttons"> 
+      <button class="guess-btn allbtns" aria-label="guess button for game" disabled>Guess</button>
+      <button class="clear-btn allbtns" aria-label="clear button to clear answers when you've guessed" disabled>Clear</button>`
+    </article>
