Write rest of html file

--- a/index.html
+++ b/index.html
@@ -17,3 +17,13 @@
       <button class="guess-btn allbtns" aria-label="guess button for game" disabled>Guess</button>
       <button class="clear-btn allbtns" aria-label="clear button to clear answers when you've guessed" disabled>Clear</button>`
     </article>
+    <article class="second-bottom-section" aria-label="This is the second half of page ">
+      <h3 class="last-guess" aria-label="title updating the fact that you had your last guess">Your last guess was</h3>
+      <h1 class="number" aria-label="guessed number that pops up on page">25</h1>
+      <h3 class="too-high" aria-label="this tells you if your guess is too high etc">Too-high</h3>
+    <button class="reset-btn"  aria-label="button to reset game" disabled>Reset</button>
+   </article>   
+  </main>
+  <script type="text/javascript" src="index.js"></script>
+  </body>
+</html>
