Add variables and event listeners

--- a/index.html
+++ b/index.html
@@ -24,6 +24,6 @@
     <button class="reset-btn"  aria-label="button to reset game" disabled>Reset</button>
    </article>   
   </main>
-  <script type="text/javascript" src="index.js"></script>
+  <script type="text/javascript" src="main.js"></script>
   </body>
 </html>
