--- a/index.html
+++ b/index.html
@@ -1,29 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <link rel="stylesheet"  href="style.css">
-  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700" rel="stylesheet">
-  <title>Number Guesser</title>
-</head>
-<body>
-  <header class="nav" aria-label="header section">
-  <h2 class="number-title">Number <span class="guesser" aria-label="Title of Game">Guesser </span></h2>
-  </h2>
-  </header>
-  <main class="container" aria-label="main container enclosing main section of page">
-    <input placeholder="Enter your guess" class="search-box" aria-label="section for inputting your guesses">
-    <article class="top-buttons" aria-label="section with guess and search buttons"> 
-      <button class="guess-btn allbtns" aria-label="guess button for game" disabled>Guess</button>
-      <button class="clear-btn allbtns" aria-label="clear button to clear answers when you've guessed" disabled>Clear</button>`
-    </article>
-    <article class="second-bottom-section" aria-label="This is the second half of page ">
-      <h3 class="last-guess" aria-label="title updating the fact that you had your last guess">Your last guess was</h3>
-      <h1 class="number" aria-label="guessed number that pops up on page">25</h1>
-      <h3 class="too-high" aria-label="this tells you if your guess is too high etc">Too-high</h3>
-    <button class="reset-btn"  aria-label="button to reset game" disabled>Reset</button>
-   </article>   
-  </main>
-  <script type="text/javascript" src="main.js"></script>
+  <head>
+    <meta charset="UTF-8">
+    <link rel="stylesheet"  href="style.css">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700" rel="stylesheet">
+    <title>Number Guesser</title>
+  </head>
+  <body>
+    <header class="nav" aria-label="header section">
+    <h2 class="number-title">Number <span class="guesser" aria-label="Title of Game">Guesser </span></h2>
+    </h2>
+    </header>
+    <main class="container" aria-label="main container enclosing main section of page">
+      <input placeholder="Enter your guess" class="search-box" aria-label="section for inputting your guesses">
+      <input placeholder="Enter min search" type="text" class="min-search" aria-label="section for part 3 minimum">
+      <input placeholder="Enter max search" type="text" class="max-search" aria-label="section for part 3 maximum >
+      <button></button>
+      <article class="top-buttons" aria-label="section with guess and search buttons"> 
+        <button class="guess-btn allbtns" aria-label="guess button for game" disabled>Guess</button>
+        <button class="clear-btn allbtns" aria-label="clear button to clear answers when you've guessed" disabled>Clear</button>`
+      </article>
+      <article class="second-bottom-section" aria-label="This is the second half of page ">
+        <h3 class="last-guess" aria-label="title updating the fact that you had your last guess">Your last guess was</h3>
+        <h1 class="number" aria-label="guessed number that pops up on page">25</h1>
+        <h3 class="too-high" aria-label="this tells you if your guess is too high etc">Your guess is too high</h3>
+      <button class="reset-btn" aria-label="button to reset game" disabled>Reset</button>
+     </article>   
+    </main>
+    <script type="text/javascript" src="main.js"></script>
   </body>
 </html>
